codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktree_browser_list.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Managed worktrees
  Select a worktree to resume its owner or copy its working directory

  ›
› /repo/worktree  Owner: 00000000-0000-0000-0000-000000000001

  ↑/↓ choose · enter confirm · esc back
