codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktree_browser_loading.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Managed worktrees

     Loading worktrees…

  esc back
