codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktrees_conversation_choices.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
expression: popup
---
  Worktrees

› 1. Continue current conversation  Preserve this conversation in the new
                                    checkout
  2. Start new conversation         Open a fresh conversation in the new
                                    checkout
  3. Browse worktrees               Resume an owner thread or copy a working
                                    directory

  ↑/↓ choose · enter confirm · esc back
